--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 	    	Most powerful animal on the internet
 	    </div>
 	  </div></a>
+	  <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	  <script type="text/javascript" src="code.js"></script>
 	</body>
 </html>
